--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,9 +7,9 @@ parameters:
     database_user:     root
     database_password: ~
 
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
+    mailer_transport:  gmail
+    mailer_host:       ~
+    mailer_user:       contact@hoangnd.me
     mailer_password:   ~
 
     locale:            en
