--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -46,3 +46,7 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+PrestaSitemapBundle:
+    resource: "@PrestaSitemapBundle/Resources/config/routing.yml"
+    prefix:   /
