--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "raulfraile/ladybug-bundle": "dev-master",
         "symfony-cmf/seo-bundle": "1.1.*@dev",
         "Trsteel/ckeditor-bundle": "~1.4",
-        "burgov/key-value-form-bundle": "@stable"
+        "burgov/key-value-form-bundle": "@stable",
+        "presta/sitemap-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
