Enable google analytics

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -126,6 +126,8 @@ mopa_bootstrap:
         dns_prefetch:
               - '//ajax.googleapis.com'
               - '//maxcdn.bootstrapcdn.com'
+        google:
+            analytics:            ~
 
 
 stof_doctrine_extensions:
