--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,8 +36,8 @@ assetic:
     filters:
         cssrewrite: ~
         less:
-            node: /usr/local/bin/node
-            node_paths: [/usr/local/lib/node_modules]
+            node: /usr/bin/node
+            node_paths: [/usr/lib/node_modules]
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         yui_css:
@@ -54,11 +54,7 @@ doctrine:
         dbname:   "%database_name%"
         user:     "%database_user%"
         password: "%database_password%"
-        path:     "%database_path%"
         charset:  UTF8
-        # if using pdo_sqlite as your database driver, add the path in parameters.yml
-        # e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        # path:     "%database_path%"
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
